# lite_agents

./: '  .gitignore  README.md  pyproject.toml  setup.py  train_dqn.py
agents/: dqn.py  test_cartpole_dqn.py
examples/: cartpole_dqn.py  cartpole_vpg.py  lunarlander_dqn.py  lunarlander_vpg.py
lite_agents/: dqn.py  dqnax.py
src/lite_agents/: dqn.py  dqn.py.flax.bak  test_jnp_set.py  vpg.py
tests/: cartpole_dqn.py  cartpole_vpg.py  lunarlander_ac.py  lunarlander_dqn.py  mlp.py  mnist_convnet.py  mnist_mlp.py  mountaincarcont_vpg.py  pendulum_vpg.py
